Update Open Graph and Twitter image meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -17,20 +17,19 @@
     <meta property="og:url" content="https://chess-tutor-alpha.vercel.app/" />
     <meta property="og:title" content="Chess Tutor | Master Your Moves with AI" />
     <meta property="og:description" content="Improve your chess skills with real-time hints and an adaptive AI opponent." />
-    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://chess-tutor-alpha.vercel.app/" />
     <meta property="twitter:title" content="Chess Tutor | Master Your Moves with AI" />
     <meta property="twitter:description" content="Improve your chess skills with real-time hints and an adaptive AI opponent." />
-    <meta property="twitter:image" content="%PUBLIC_URL%/logo512.png" />
+    <meta property="twitter:image" content="%PUBLIC_URL%/og-image.png" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    </head>
+  </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    </body>
+  </body>
 </html>
