--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>Chess Tutor | Master Your Moves with AI</title>
-    <meta
-      name="description"
-      content="Play chess against an AI with adjustable difficulty. Get real-time hints and improve your game with Chess Tutor."
-    />
-    <meta name="keywords" content="chess, chess tutor, ai chess, learn chess, chess hints" />
+    <meta name="google-site-verification" content="IV_P3sLZmSJ2UTzS_XG9h-..." />
 
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://chess-tutor-alpha.vercel.app/" />
-    <meta property="og:title" content="Chess Tutor | Master Your Moves with AI" />
-    <meta property="og:description" content="Improve your chess skills with real-time hints and an adaptive AI opponent." />
-    <meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
-
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://chess-tutor-alpha.vercel.app/" />
-    <meta property="twitter:title" content="Chess Tutor | Master Your Moves with AI" />
-    <meta property="twitter:description" content="Improve your chess skills with real-time hints and an adaptive AI opponent." />
-    <meta property="twitter:image" content="%PUBLIC_URL%/og-image.png" />
-
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>AI Chess Tutor</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
